refactor(docker): 重构 Docker 部署配置并优化脚本
- 删除旧的 app/docker 目录下的 Dockerfile 和 docker-compose.yml
- 新增项目根目录的 .env 环境变量配置文件
- 创建新的 docker-compose.yml 服务编排文件，优化容器配置
- 添加新的 Dockerfile 镜像构建文件，支持项目动态命名
- 重构 start.sh 部署脚本，增强错误处理和日志输出
- 更新 CLAUDE.md 文档，添加文件存储日志下载功能说明
- 优化 StreamUtils.java 工具类文档注释和方法说明
- 完善 WebUtils.java 响应输出相关方法的文档注释
- 调整代码结构，将分页相关类移动到 data 子目录
- 更新加密模块配置，将 encryptor-api 重命名为 crypto-api